--- a/fly.toml
+++ b/fly.toml
@@ -8,13 +8,17 @@ primary_region = 'ams'
 
 [build]
 
+[processes]
+  web = "fastapi run app/main.py"
+  cron = "python /code/etl/scraper.py && supercronic etl/crontab"
+
 [http_service]
   internal_port = 8000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ['app']
+  processes = ['web']
 
 [[vm]]
   size = 'shared-cpu-1x'
