--- a/fly.toml
+++ b/fly.toml
@@ -10,7 +10,7 @@ primary_region = 'ams'
 
 [processes]
   web = "fastapi run app/main.py"
-  cron = "python /code/etl/scraper.py && supercronic etl/crontab"
+  cron = "sh -c 'python etl/scraper.py && supercronic etl/crontab'" # 'sh -c' is necessary to run multiple commands in a single process
 
 [http_service]
   internal_port = 8000
